--- a/Teebay/Purchase/Views/Storyboard/Purchase.storyboard
+++ b/Teebay/Purchase/Views/Storyboard/Purchase.storyboard
@@ -102,6 +102,120 @@
             </objects>
             <point key="canvasLocation" x="-22" y="4"/>
         </scene>
+        <!--Rental Date PopVC-->
+        <scene sceneID="AJ7-Sn-mHR">
+            <objects>
+                <viewController storyboardIdentifier="RentalDatePopVC" id="nWc-cE-VqS" customClass="RentalDatePopVC" customModule="Teebay" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Sbl-cq-C0i">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="84J-hE-WN8">
+                                <rect key="frame" x="40" y="200" width="297" height="384"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="ulY-Mg-nw0">
+                                        <rect key="frame" x="16" y="16" width="265" height="352"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="wH9-Az-K1r">
+                                                <rect key="frame" x="0.0" y="0.0" width="265" height="258.66666666666669"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rental Period" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGh-67-Oxs">
+                                                        <rect key="frame" x="0.0" y="0.0" width="125.33333333333334" height="24"/>
+                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Rvb-MJ-YnU">
+                                                        <rect key="frame" x="0.0" y="43.999999999999993" width="200" height="68.333333333333314"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v6L-Ja-7Ms">
+                                                                <rect key="frame" x="0.0" y="0.0" width="39.333333333333336" height="20.333333333333332"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="vYH-jg-jbU">
+                                                                <rect key="frame" x="0.0" y="28.333333333333314" width="200" height="40"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="40" id="iBN-gU-th8"/>
+                                                                </constraints>
+                                                            </datePicker>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yPS-1e-dnh">
+                                                        <rect key="frame" x="0.0" y="132.33333333333331" width="200" height="68.333333333333314"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WiJ-YM-9Qu">
+                                                                <rect key="frame" x="0.0" y="0.0" width="18.333333333333332" height="20.333333333333332"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="cHv-Lt-3cS">
+                                                                <rect key="frame" x="0.0" y="28.333333333333371" width="200" height="40"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="40" id="tNj-7n-bOg"/>
+                                                                </constraints>
+                                                            </datePicker>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="FgZ-jS-LHM">
+                                                        <rect key="frame" x="0.0" y="220.66666666666669" width="258" height="38"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nN2-u8-yVG">
+                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="38"/>
+                                                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                                                <inset key="contentEdgeInsets" minX="16" minY="8" maxX="16" maxY="8"/>
+                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                                <state key="normal" title="Go Back"/>
+                                                                <connections>
+                                                                    <action selector="onTappedGoBackButton:" destination="nWc-cE-VqS" eventType="touchUpInside" id="DsO-vW-LXw"/>
+                                                                </connections>
+                                                            </button>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rOp-vl-uhN">
+                                                                <rect key="frame" x="120" y="0.0" width="138" height="38"/>
+                                                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                                                                <inset key="contentEdgeInsets" minX="16" minY="8" maxX="16" maxY="8"/>
+                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                                <state key="normal" title="Confirm Rent"/>
+                                                                <connections>
+                                                                    <action selector="onTappedConfirmRentButton:" destination="nWc-cE-VqS" eventType="touchUpInside" id="vIE-ca-qad"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ulY-Mg-nw0" firstAttribute="top" secondItem="84J-hE-WN8" secondAttribute="top" constant="16" id="8RG-UD-sng"/>
+                                    <constraint firstItem="ulY-Mg-nw0" firstAttribute="leading" secondItem="84J-hE-WN8" secondAttribute="leading" constant="16" id="ZMO-cV-hrO"/>
+                                    <constraint firstAttribute="trailing" secondItem="ulY-Mg-nw0" secondAttribute="trailing" constant="16" id="j5H-Wl-u56"/>
+                                    <constraint firstAttribute="bottom" secondItem="ulY-Mg-nw0" secondAttribute="bottom" constant="16" id="pXr-tB-J3V"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="74P-dS-Wso"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="84J-hE-WN8" firstAttribute="leading" secondItem="74P-dS-Wso" secondAttribute="leading" constant="40" id="ESL-ba-d8w"/>
+                            <constraint firstItem="84J-hE-WN8" firstAttribute="top" secondItem="Sbl-cq-C0i" secondAttribute="top" constant="200" id="hg3-DX-Psl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="84J-hE-WN8" secondAttribute="trailing" constant="40" id="kSr-tk-NBv"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="84J-hE-WN8" secondAttribute="bottom" constant="200" id="tPO-fT-BDY"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="endDatePicker" destination="cHv-Lt-3cS" id="g2y-Pd-Vda"/>
+                        <outlet property="startDatePicker" destination="vYH-jg-jbU" id="sdT-Mo-l3p"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nNu-1J-8Eg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="637" y="13"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
@@ -109,6 +223,12 @@
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
