--- a/Teebay/Auth/View/Storyboard/Auth.storyboard
+++ b/Teebay/Auth/View/Storyboard/Auth.storyboard
@@ -273,7 +273,7 @@
                                 <rect key="frame" x="0.0" y="118" width="393" height="666"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="bPt-4p-FZ1">
-                                        <rect key="frame" x="8" y="80" width="377" height="369"/>
+                                        <rect key="frame" x="8" y="80" width="377" height="427"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8qk-0L-UxX">
                                                 <rect key="frame" x="0.0" y="0.0" width="377" height="20.333333333333332"/>
@@ -335,8 +335,8 @@
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="byO-QQ-X4i">
-                                                <rect key="frame" x="0.0" y="201" width="377" height="86"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="byO-QQ-X4i">
+                                                <rect key="frame" x="0.0" y="201" width="377" height="144"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFS-zq-1dW">
                                                         <rect key="frame" x="146" y="40" width="85" height="38"/>
@@ -350,11 +350,22 @@
                                                             <action selector="onTappedRegisterButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Z2F-aK-vNO"/>
                                                         </connections>
                                                     </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="84J-7f-IiK">
+                                                        <rect key="frame" x="89" y="98" width="199" height="38"/>
+                                                        <color key="backgroundColor" red="0.34509803919999998" green="0.26274509800000001" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                        <inset key="contentEdgeInsets" minX="16" minY="8" maxX="16" maxY="8"/>
+                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                        <state key="normal" title="LOGIN WITH FACEID"/>
+                                                        <connections>
+                                                            <action selector="loginWithFaceIDTapped:" destination="M8w-sO-YDQ" eventType="touchUpInside" id="Jmv-C7-Vz8"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                                 <edgeInsets key="layoutMargins" top="40" left="8" bottom="8" right="8"/>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OmV-WI-knN">
-                                                <rect key="frame" x="0.0" y="307" width="377" height="62"/>
+                                                <rect key="frame" x="0.0" y="365" width="377" height="62"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="Jwp-9K-OyG">
                                                         <rect key="frame" x="57.666666666666657" y="20" width="261.66666666666674" height="34"/>
@@ -399,6 +410,7 @@
                     <connections>
                         <outlet property="emailErrorLabel" destination="Oea-Zw-Wu7" id="d4L-7F-JOj"/>
                         <outlet property="emailTextfield" destination="9le-YF-F62" id="UFG-TI-8QM"/>
+                        <outlet property="ligonWithFaceidButton" destination="84J-7f-IiK" id="JQU-2F-UE3"/>
                         <outlet property="logiinButton" destination="KFS-zq-1dW" id="Xqz-HA-Ole"/>
                         <outlet property="passwordErrorLabel" destination="ES9-lk-y8e" id="Dfw-rF-OJz"/>
                         <outlet property="passwordTextField" destination="S9q-Wf-4DI" id="H5w-pG-pCr"/>
@@ -415,10 +427,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
